# REVENANT_V_30

./: Economies.md  README.md  REVENANT_V31.md  REVENANT_V31_FEATURE_ROADMAP.md  Revenant v31 to v32 migration matrix.md  Untitled.md  revenant-calculator.html  tsconfig.json
DATABASE/:  bank_approvals.sql  ai_training_datasets.sql  ai_treaties.sql  ai_treaty_nonces.sql  audit_ledger.sql  bank_dispatch_logs.sql  bank_memories.sql  bank_webhook_nonces.sql  circuit_breakers.sql  dashboard_feed.sql  draft_sections.sql  provenance_ledger.sql  semantic_chunks.sql  traffic_buckets.sql  traffic_control.sql  translation_memory.sql  validation_lake.sql
Multi_Workflow_based_workflows/: REVENANT V31 - F5 (Proactive Nudges).json  REVENANT V31 - SRE & MLOps Batch Jobs.json  REVENANT_V_31_F1-F4.json  REVNANT_V_32_Trunk_3.json  Regional.json  SYS_VLAN_0_CORE_SWITCH.json  k6_tester.json  trunk_1_compliance.json  trunk_2_ai_cognition.json  trunk_3_forensic_ledger.json  trunk_4_approval_dispatch.json  trunk_5a_logic_distributor.json  trunk_5b_core_banking.json  vlan-0-core-switch.json  vlan-10-p2p-service.json  vlan-20-faq-service.json  vlan-30-billpay-service.json  vlan-40-credit-service.json  vlan-50-merchant-service.json
Revenant/: README.md  go.mod  go.sum  main.go  start_engine.sh
Revenant/revenant-engine/: Cargo.toml  xdp_filter.c
Revenant/revenant-engine/src/: consensus.rs  election.rs  envelope.rs  main.rs  mutator.rs  network_rx.rs  replay.rs  snapshot.rs  wal.rs
Revenant_ATIS/: .env  .env.example  README.md  audit_report.md  fix_metrics.sql  package-lock.json  (+2 more)
(+223 files in other folders)
